# SimpleDataModel

./: .gitignore  CMakeLists.txt  README.md  identifier.h  main.cpp  tests.cpp
include/: DataModel.h  DataModel.tpp  DataModelEntry.h  DataModelEntry.tpp
src/: DataModel.cpp  DataModelEntry.cpp
