
if(ESP_PLATFORM)
    idf_component_register(SRC_DIRS src
            INCLUDE_DIRS include)
    component_compile_options(-std=gnu++17)
else()
    cmake_minimum_required(VERSION 3.16)
    project(data_model)
    set(CMAKE_CXX_STANDARD 17)
    add_library(model_lib STATIC src/DataModel.cpp include/DataModel.h src/DataModelEntry.cpp include/DataModelEntry.h)
    add_executable(data_model main.cpp )
    add_executable(tests_setup tests.cpp)
    target_link_libraries(data_model model_lib)
    target_link_libraries(tests_setup model_lib)
endif()
